--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -78,7 +78,7 @@ body,
 }
 
 /* Filter Styles */
-.f {
+.c {
   margin-top: 10px;
 }
 
@@ -89,15 +89,15 @@ body,
   padding: 10px 0px 6px 0px;
 }
 
-.f-r {
+.c-r {
   display: flex;
   gap: 10px;
   overflow-x: scroll;
   padding: 6px 6px 10px 4px;
 }
 
-.f-btn {
-  font-size: 14px;
+.c-btn {
+  font-size: 16px;
   padding: 8px 18px;
   display: flex;
   align-items: center;
@@ -110,14 +110,14 @@ body,
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.1);
 }
 
-.f-btn.active {
+.c-btn.active {
   background-color: var(--primary);
   color: var(--white);
 }
 
 /* Product List Styles */
 .pl-r {
-  margin-top: 10px;
+  margin: 10px 0px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 8px;
@@ -156,7 +156,7 @@ body,
 .p-n {
   width: 100%;
   height: 60%;
-  font-size: 14px;
+  font-size: 16px;
   display: flex;
   align-items: start;
   justify-content: start;
@@ -164,7 +164,7 @@ body,
 .p-p {
   width: 100%;
   height: 40%;
-  font-size: 13px;
+  font-size: 14px;
   display: flex;
   align-items: end;
   justify-content: end;
