--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -32,6 +32,7 @@ body,
   width: 100%;
   height: 100%;
   line-height: 120%;
+  position: relative;
   font-size: inherit;
   font-weight: normal;
   letter-spacing: normal;
@@ -44,7 +45,7 @@ body,
   width: 100%;
   margin: 0 auto;
   padding: 0 16px;
-  max-width: 1024px;
+  max-width: 768px;
 }
 
 /* Header Style */
@@ -120,6 +121,7 @@ body,
   margin: 10px 0px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 8px;
   grid-column-gap: 8px;
   grid-row-gap: 8px;
 }
@@ -135,20 +137,21 @@ body,
 /* Product Card Styles */
 .p {
   width: 100%;
+  /* height: 220px; */
   padding: 10px;
   border-radius: 12px;
-  height: 200px;
   background-color: var(--white);
 }
 
 .p-img {
   width: 100%;
-  height: 70%;
+  /* height: 60%; */
+  padding: 4px;
 }
 
 .p-t {
   width: 100%;
-  height: 30%;
+  /* height: 30%; */
   display: flex;
   flex-direction: column;
 }
@@ -169,3 +172,105 @@ body,
   align-items: end;
   justify-content: end;
 }
+
+.p-btn {
+  width: 100%;
+  height: 16%;
+  /* padding: px; */
+  border-radius: 8px;
+  background: var(--primary);
+}
+
+.footer {
+  width: 100%;
+  padding: 8px 0px;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
+  border-radius: 24px 24px 0px 0px;
+  background-color: var(--white);
+  -webkit-box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.footer-r {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content:space-between ;
+}
+
+.order-price {
+  font-size: 20px;
+
+}
+
+.order-btn {
+  width: 50%;
+  height: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 12px;
+  color: var(--white);
+  background-color: var(--primary);
+}
+
+/* import React from 'react';
+import useCartStore from '../../store';
+import { ProductsType } from '../../types';
+import toast, { Toast } from 'react-hot-toast';
+import { Minus, Plus, X } from 'lucide-react';
+
+
+export const ProductCard: React.FC<{ product: ProductsType }> = ({ product }) => {
+  const { addToCart, cart, inc, dec } = useCartStore()
+
+  const foundedItem = cart.find((item) => item.id === product.id)
+
+  const decrease = (id: number) => {
+    if (foundedItem) {
+      dec(id)
+    }
+    else {
+      toast.error('error')
+    }
+  }
+
+
+  return (
+    <div className="p-2 md:p-4 w-[100%] h-full flex flex-col rounded-lg overflow-hidden bg-white shadow-md hover:shadow-lg transition-all">
+      <div className="">
+        <img
+          alt="Les Ailes chicken wings"
+          className="object-contain"
+          height={300}
+          src={product.img}
+          style={{
+            aspectRatio: "300/300",
+            objectFit: "contain",
+          }}
+          width={300}
+        />
+      </div>
+      <div className="mt-4 flex flex-col justify-between flex-auto">
+        <h3 className="text-sm md:text-lg text-pretty font-medium">{product.name}</h3>
+        <p className="h-full text-base md:text-xl font-bold text-[#FC014A] flex-auto">
+          {product.price} <span className="text-lg">сум</span>
+        </p>
+        {
+
+          !foundedItem ? <button onClick={() => addCart(product)} className='w-full mt-2 p-1 md:p-[6px] rounded text-base md:text-lg text-white bg-[#FC014A] hover:bg-[#fc0148da] transition-all'>Add to cart</button>
+            :
+            <div className='mt-2 p-1 md:p-2 flex items-center justify-between bg-gray-100 rounded transition-all'>
+              <button onClick={() => decrease(product.id)} className='bg-[#D23232] rounded-sm'><Minus color="#fff" /></button>
+              <p>{foundedItem.qty}</p>
+              <button onClick={() => inc(product.id)} className='bg-[#29CC29] rounded-sm'><Plus color="#fff" /></button>
+            </div>
+        }
+      </div>
+    </div>
+  )
+} */
