--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -178,7 +178,7 @@ body,
 
 .p-btn {
   width: 100%;
-  height: 24px;
+  height: 32px;
   color: var(--white);
   font-size: 14px;
   border-radius: 8px;
@@ -186,6 +186,8 @@ body,
 }
 
 .p-count{
+  width: 100%;
+  height: 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
