--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -111,6 +111,7 @@ body,
   -webkit-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.1);
+  transition: all 0.1s ease-in-out;
 }
 
 .c-btn.active {
@@ -120,7 +121,7 @@ body,
 
 /* Product List Styles */
 .pl-r {
-  margin: 10px 0px;
+  margin: 10px 0px 50px 0px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 8px;
@@ -220,7 +221,7 @@ body,
 .footer {
   width: 100%;
   padding: 8px 0px;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   left: 0;
   z-index: 9;
