--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,7 +5,7 @@
   /* --color-fafafa: #FAFAFA */
   --white: #ffffff;
   --primary: #ff8e2b;
-  --dec: #FF0000;
+  --dec: #ff0000;
   --inc: #008000;
 }
 
@@ -121,7 +121,8 @@ body,
 
 /* Product List Styles */
 .pl-r {
-  margin: 10px 0px 50px 0px;
+  margin-top: 10px;
+  padding-bottom: 80px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 8px;
@@ -186,7 +187,7 @@ body,
   background: var(--primary);
 }
 
-.p-count{
+.p-count {
   width: 100%;
   height: 32px;
   display: flex;
@@ -194,13 +195,13 @@ body,
   justify-content: space-between;
 }
 
-.p-count{
+.p-count {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.p-btn_dec{
+.p-btn_dec {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -209,14 +210,13 @@ body,
   background-color: var(--dec);
 }
 
-.p-btn_inc{
+.p-btn_inc {
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 6px;
   padding: 4px;
   background-color: var(--inc);
-
 }
 .footer {
   width: 100%;
@@ -237,12 +237,11 @@ body,
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content:space-between ;
+  justify-content: space-between;
 }
 
 .order-price {
   font-size: 20px;
-
 }
 
 .order-btn {
